コンパイル方法について少し修正した

--- a/config.org
+++ b/config.org
@@ -8,9 +8,7 @@
   (let ((current_dir (file-name-directory (buffer-file-name))))
     (cd (concat current_dir "plugins/ddskk"))
     (add-to-list 'load-path (concat current_dir "plugins/ddskk"))
-    (add-to-list 'load-path (concat current_dir "plugins/ddskk/test"))
-    (add-to-list 'load-path (concat current_dir "plugins/posframe"))
-    (async-shell-command "/usr/bin/make")
+    (async-shell-command "make clean;make;make info")
     (cd current_dir)
     (let ((lisp_dir (concat current_dir "lisp")))
       (unless (file-directory-p lisp_dir) (mkdir lisp_dir)))
@@ -26,7 +24,30 @@
 #+begin_src emacs-lisp :results file :file config_compile.log :output-dir log/
   (let ((current_dir (file-name-directory (buffer-file-name))))
     (byte-recompile-directory current_dir 0 t)
-    (native-compile-async current_dir t t)
+    (add-to-list 'load-path (concat current_dir "plugins/ddskk"))
+    (add-to-list 'load-path (concat current_dir "plugins/ddskk/tut-code"))
+    (add-to-list 'load-path (concat current_dir "plugins/ddskk/nicola"))
+    (add-to-list 'load-path (concat current_dir "plugins/posframe"))
+    (native-compile-async (concat current_dir "init.el"))
+    (native-compile-async (concat current_dir "early-init.el"))
+    (native-compile-async (concat current_dir "lisp/custom-azik.el"))
+    (native-compile-async (concat current_dir "plugins/ef-themes") t t)
+    (native-compile-async (concat current_dir "plugins/ddskk/ccc.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/cdb.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-autoloads.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-vars.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-cdb.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-cus.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-emacs.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-leim.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-macs.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-num.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-tankan.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-server.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk/skk-version.el"))
+    (native-compile-async (concat current_dir "plugins/posframe/posframe.el"))
+    (native-compile-async (concat current_dir "plugins/ddskk-posframe/ddskk-posframe.el"))
     (cd current_dir))
 #+end_src
 
@@ -281,6 +302,7 @@ elpacaとか使う場合これを抑制しておかなければならない。
               (if window-system
                   (require 'ddskk-posframe)
                 (setq skk-show-inline t))))
+  (eval-when-compile (require 'ddskk-posframe))
   (with-eval-after-load 'ddskk-posframe
     (ddskk-posframe-mode t))
   (with-eval-after-load 'ddskk-posframe
